gcc/testsuite/rust/rustc/ui/parser/attr-bad-meta.rs
#[path*] // { dg-error "" "" { target *-*-* } }
mod m {}

